Fix browser tab title: Change from '365 Alignment Program' to 'RPGCC Client Portal'

--- a/apps/client-portal/index.html
+++ b/apps/client-portal/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>365 Alignment Program - Client Portal</title>
-    <meta name="description" content="Your business transformation journey starts here" />
+    <title>RPGCC Client Portal</title>
+    <meta name="description" content="RPGCC Client Portal - Access your assessments, roadmaps, and services" />
   </head>
   <body>
     <div id="root"></div>
